# blender-dev-bridge

./: .gitignore  README.md  dev_config.toml  dev_fns.py  get_blender4.1.bat  get_blender4.3.bat  pyproject.toml
src/blender_dev_bridge/: __init__.py  blender_manifest.toml  operators.py  requirements_pypi.txt
